# wall-a

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md
firmware/arduino/: platformio.ini
firmware/arduino/src/: main.cpp
hardware/: BOM.md
hardware/chassis/: README.md
pi/: pyproject.toml  walla.service
pi/src/walla/: main.py  state.py  threads.py
pi/src/walla/audio/: io.py
pi/src/walla/autonomy/: navigator.py
pi/src/walla/camera/: capture.py
pi/src/walla/controller/: gamepad.py
pi/src/walla/serial_bridge/: bridge.py
pi/src/walla/web/: __init__.py  logbuffer.py  server.py
scripts/: deploy-pi.sh  flash-arduino.sh
server/: pyproject.toml
server/src/walla_server/: main.py
server/src/walla_server/llm/: personality.py
server/src/walla_server/stt/: transcriber.py
server/src/walla_server/tts/: synthesizer.py
server/src/walla_server/vision/: detector.py
shared/schemas/: README.md  serial_protocol.json
