[project]
name = "walla-server"
version = "0.1.0"
description = "Wall-A GPU server — vision, LLM, STT, TTS"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.1.0",
    "openai-whisper>=20231117",
    "ollama>=0.1.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
]

[project.scripts]
walla-server = "walla_server.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]
